[package]
name = "greenscreen"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
fern = { version = "0.6", features = ["colored"] }
dotenv = "0.15"
dashmap = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.29", features = ["full"] }
serenity = { version = "0.12", default-features = false, features = ["full"] }
songbird = {  version = "0.4", default-features = true, features = ["receive"] }
tungstenite = "0.23"
tokio-tungstenite = "0.23"